2005-04-01  Lluis Sanchez Gual <lluis@novell.com>

	* CachedRawResponse.cs: Fix warning.

2004-11-08 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* CacheEntry.cs: convert the external DateTime to GMT, as everything
	else uses that timezone. Fixes bug #69194.

2004-10-03 Ben Maurer  <bmaurer@ximian.com>

	* Cache.cs, CacheEntry.cs, CacheExpires.cs, ExpiresBuckets.cs:
	use UtcNow rather than Now.

2004-05-27	Patrik Torstensson <totte@hiddenpeaks.com>

	* ExpiresBucket.cs (FlushExpiredItems): fix csc and a typo bug

2004-05-27	Patrik Torstensson <totte@hiddenpeaks.com>

	* CacheEntry.cs,CacheExpires.cs,ExpiresBucket.cs,
	  Cache.cs : Fixed deadlock issues, fixed
	  items not correctly being flushed, fixed update
	  of item when expiration has been updated more
	  than 1 min (placed in wrong bucket), 
	  fixed deadlock during cache callback when item 
	  is removed due to expiriation.
	  
	  Rewrite of locking handling in Cache class, leading
	  to better performance and less bugs.
	  
	  This rewrite is due to a number of bugs found
	  in the output caching during load (leading to memory 
	  leaks and deadlocks)

2004-05-16	Patrik Torstensson <totte@hiddenpeaks.com>

	* ExpiresBucket.cs: Style changes plus;
	(Update): Fixed possible lock bug (bug 54531)
	(Expand): remove lock optimization due to it can cause newly 
	added items to be lost.
	(Remove): fixed possible lock bug.
		
2004-04-16  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* Cache.cs: fix from Jan Jaros for NullRef (bug #56996).

2004-04-07  Lluis Sanchez Gual <lluis@ximian.com>

	* Cache.cs, CacheEntry.cs, ExpiresBuckets.cs: The value to use to
	specify infinite timeout in ReaderWriterLock is -1, not 0.

2004-03-19  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* Watcher.cs: Removed file. Jackson made it obsolete and already
	removed it from the .sources file.

2004-02-09  Jackson Harper <jackson@ximian.com>

	* ExpiresBucket.cs: Remove duplicate code. Fixes bug #54031.
	